Improve how accessors are handled

--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
     </h1>
     <p>
         Paragraph
-        <b>
+        <b accessor="bacon">
             Bold
         </b>
         Not bold
