--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" id="dude">
     <title>title</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -16,6 +16,9 @@
             Bold
         </b>
         Not bold
+        <b>
+            Again it's bold
+        </b>
     </p>
   </body>
 </html>
