Fix bug that caused duplicate head / body elements

--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
     </h1>
     <p>
         Paragraph
-        <b accessor="bacon">
+        <b accessor="bacon" class="bacon">
             Bold
         </b>
         Not bold
