--- a/tests/example.html
+++ b/tests/example.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" id="dude">
     <title>title</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Page1</h1>
-    <p>Paragraph</p>
+    <h1>
+        Header
+    </h1>
+    <p>
+        Paragraph
+        <b accessor="bacon" class="bacon">
+            Bold
+        </b>
+        Not bold
+        <b>
+            Again it's bold
+        </b>
+        <noodles></noodles>
+    </p>
   </body>
 </html>
